--- a/gb/21/9/7/n13216994.md
+++ b/gb/21/9/7/n13216994.md
@@ -1,19 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yokxwt356/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yokxwt356/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yokxwt356/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yokxwt356/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yokxwt356/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yokxwt356/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yokxwt356/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yokxwt356/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yokxwt356/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yokxwt356/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yokxwt356/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yokxwt356/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yokxwt356/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yokxwt356/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yokxwt356/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yokxwt356/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yokxwt356/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yokxwt356/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yokxwt356/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yokxwt356/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yokxwt356/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yokxwt356/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yokxwt356/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yokxwt356/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【十字路口】五只黑天鹅盘旋 中共风险罩顶</h2>
-<a href="https://dsqxb3b7muii1.cloudfront.net/Z5hNUAQ5q"><img width="600" src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yokxwt356/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
-<h6>黑天鹅惊现北京，中共不祥凶兆？中共头上五只黑天鹅盘旋。（《世界十字路口》提供）
-</h6>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【十字路口】五只“黑天鹅”盘旋 中共风险罩顶</h2>
+<a href="https://d2aqxvnyguf0uq.cloudfront.net/V0uNUAQ5q"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
 	<p>【大纪元2021年09月07日讯】大家好，我是唐浩，今天都好吗？</p>
-<p>今日焦点：<ahref="https://github.com/yokxwt356/djy/blob/master/gb/tag/%E9%BB%91%E5%A4%A9%E9%B9%85.md#1">黑天鹅</a>惊现北京，中共不祥凶兆？强推共同富裕，恐变共同贫穷？中南海内斗火热，恐酿内战？极左社会主义复辟，重演文革腥风血雨？</p>
-<p>9月5日，一只<ahref="https://github.com/yokxwt356/djy/blob/master/gb/tag/%E9%BB%91%E5%A4%A9%E9%B9%85.md#1">黑天鹅</a>降落在北京<ahref="https://github.com/yokxwt356/djy/blob/master/gb/tag/%E5%A4%A9%E5%AE%89%E9%97%A8.md#1">天安门</a>广场，引发众人围观，警方还出动驱散群众。由于“黑天鹅”属于敏感的不祥象征，又现身在最具政治标志性的天安门广场，因此引发海内外热议。</p>
+<p>今日焦点：<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%BB%91%E5%A4%A9%E9%B9%85.md#1">黑天鹅</a>惊现北京，中共不祥凶兆？强推共同富裕，恐变共同贫穷？中南海内斗火热，恐酿内战？极左社会主义复辟，重演文革腥风血雨？</p>
+<p>9月5日，一只<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%BB%91%E5%A4%A9%E9%B9%85.md#1">黑天鹅</a>降落在北京<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A4%A9%E5%AE%89%E9%97%A8.md#1">天安门</a>广场，引发众人围观，警方还出动驱散群众。由于“黑天鹅”属于敏感的不祥象征，又现身在最具政治标志性的天安门广场，因此引发海内外热议。</p>
 <p>但事实上，中共与中国目前确实已经遭遇多项“黑天鹅”风险，这些黑天鹅们不但危及中国的百姓民生，更危及中共政权的生存。究竟，有哪些“黑天鹅”威胁盘旋在北京上空？又将对中共与中国带来哪些挑战？两岸局势与东亚局势又将受到什么牵连？本集节目，与您探讨。</p>
-<p style="text-align: center;"><div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://dsqxb3b7muii1.cloudfront.net/Z5hNUAQ5q"><img width="600" src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yokxwt356/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/bBGQIH-3aCU?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
-	</div></p>
+<p><center><a src=""></a><a href="https://d2aqxvnyguf0uq.cloudfront.net/V0uNUAQ5q"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/365281af-8f02-4ce7-9389-0804a99bf79a?r=16x9&amp;d=951" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a><center></center></center></p>
 <h2>黑天鹅惊现北京 引热议</h2>
-<p>这两天，北京城里发生一件可爱的怪事，引起海内外热烈讨论。9月5日，一只黑色的天鹅降落在北京<ahref="https://github.com/yokxwt356/djy/blob/master/gb/tag/%E5%A4%A9%E5%AE%89%E9%97%A8.md#1">天安门</a>广场，吸引周边民众围观，因为黑天鹅被认为是意外灾祸的不祥之兆，因此相当敏感，警方还一度驱离围观的群众。</p>
+<p>这两天，北京城里发生一件可爱的怪事，引起海内外热烈讨论。9月5日，一只黑色的天鹅降落在北京<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A4%A9%E5%AE%89%E9%97%A8.md#1">天安门</a>广场，吸引周边民众围观，因为黑天鹅被认为是意外灾祸的不祥之兆，因此相当敏感，警方还一度驱离围观的群众。</p>
 <p>但没多久，天空竟然还下起雨来，这也让人不禁好奇，是不是意味着这次黑天鹅出现之后，会让北京或中共陷入风雨飘摇呢？因此，今天我们要跟大家来聊一个主题：</p>
 <p>今日主题：五只黑天鹅盘旋北京 中共不祥阴霾罩顶</p>
 <p>不过，我们想先提醒大家，请查看一下您订阅我们频道的状况是否正常？有没有被系统自动取消？如果被取消了，还请您再次订阅我们的频道。</p>
@@ -22,10 +20,10 @@
 <h2>五只黑天鹅盘旋 中共风险罩顶</h2>
 <p>当然，北京证交所的资金会不会被黑天鹅叼走，我们不得而知。不过，在我看来，目前的中国与中共政权上空，确实有黑天鹅在盘旋着，而且还不只一只，而是一整个家族。我们来跟大家聊聊这个“黑天鹅家族”都有谁：</p>
 <h3>黑天鹅1号：强推“共同富裕” 导致共同贫穷</h3>
-<p><ahref="https://github.com/yokxwt356/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>日前喊出“促进共同富裕”口号，宣称要对社会经济进行“三次分配”，马上吓得大企业们纷纷掏钱出来做慈善，像腾讯捐了500亿人民币，阿里巴巴1,000亿，拼多多也捐了100亿。</p>
-<p>这种作法虽然钱来得快，但实际上却让这些民营企业沦为中共治下贫富不均的替罪羊，中共没能力改善贫富不均的问题，结果却拿刀抢劫，逼这些企业把钱交出来，表面上说是要做慈善，实际上是让企业替中共的社会维稳工作买单，花钱消灾。民企就成了中共的肉票与钱包，让企业是胆战心惊。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>日前喊出“促进共同富裕”口号，宣称要对社会经济进行“三次分配”，马上吓得大企业们纷纷掏钱出来做慈善，像腾讯捐了500亿人民币，阿里巴巴1,000亿，拼多多也捐了100亿。</p>
+<p>这种做法虽然钱来得快，但实际上却让这些民营企业沦为中共治下贫富不均的替罪羊，中共没能力改善贫富不均的问题，结果却拿刀抢劫，逼这些企业把钱交出来，表面上说是要做慈善，实际上是让企业替中共的社会维稳工作买单，花钱消灾。民企就成了中共的肉票与钱包，让企业是胆战心惊。</p>
 <p>而且，中共这招“杀富取财”，也摧毁了过去40年来中国经济能够高速发展的一块关键垫脚石，叫做“保障财产权”。邓小平当初的改革开放，就是看到“共产”这条路走不通，会让中国经济疲软坍塌，所以他就允许人民拥有私人财产，这样才让人民与企业有积极动力去努力工作、努力赚钱。</p>
-<p>但是，这次的“共同富裕”，显然是官方要强夺民间资产，让财产权失去保障；加上中共用“反垄断”的名义在大力干预市场与企业的运作，让企业无法自由竞争，这些手段一来会让民营企业失去信心，不敢轻易的投资扩张；二来也会让海外资金摇头失望，不敢进入中国投资实体经济。</p>
+<p>但是，这次的“共同富裕”，显然是官方要强夺民间资产，让财产权失去保障；加上中共用“反垄断”的名义在大力干预市场与企业的运作，让企业无法自由竞争，这些手段一来会让民营企业失去信心，不敢轻易地投资扩张；二来也会让海外资金摇头失望，不敢进入中国投资实体经济。</p>
 <p>而且，这次中共强逼大企业“自愿捐献”，其实也是有意地要引导社会民意去“仇富”，让人们认为企业为富不仁，所以党出来主持正义，要大企业把钱交出来分给老百姓。但实际上，钱会不会交到老百姓手里呢，我不乐观，但可以肯定的是，这种斗争手法会增加民间对企业的敌意与仇富心态。</p>
 <p>这样一来，企业家就会面临越来越严峻的生存环境，会遭遇越来越复杂的政治风险，那就会抑制了他们投资与经营的意愿，很可能会促使更多企业走向解散、裁员或者外移出走。所以接下来，中国的失业问题会上升，人民的收入与消费会减少，这样中国就不会走向“共同富裕”，反而走向“共同贫穷”。</p>
 <p>中共也意识到这个危机，所以安排副总理刘鹤出来“澄清”、“洗地”，说北京的民营经济发展方针没有变，将来也不会变，还说要保护产权和知识产权。</p>
@@ -33,7 +31,7 @@
 <p>而且，从另一个角度讲，中共拿刀逼着企业掏出来的钱也很有限，而且无法长久。比方说阿里巴巴、腾讯和拼多多总共捐了1,600亿，听起来好像不少，但李克强说，中国有6亿人每个月收入不到1,000块，如果把1,600亿分给这6亿人就好，那平均每人也只能一次性分到267块钱，其实效用有限。</p>
 <p>所以中共如果继续采取这种“劫富抢饼”的手段，而不是设法“把饼做大做多”，那么中国经济只会越来越窘，越来越穷。</p>
 <h3>黑天鹅2号：中南海内斗过激 或爆发内战或暗杀</h3>
-<p>明年就是中共二十大的权力改组会议，现在我们已经看到中共高层的权力斗争在如火如荼地展开，不但党内传出汪洋准备接班<ahref="https://github.com/yokxwt356/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的流言，引发北京高层不满；而且好几家中共党媒还一起转抛文章，鼓吹“深刻的变革”，疑似要发动第二次的“文化大革命”。</p>
+<p>明年就是中共二十大的权力改组会议，现在我们已经看到中共高层的权力斗争在如火如荼地展开，不但党内传出汪洋准备接班<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的流言，引发北京高层不满；而且好几家中共党媒还一起转抛文章，鼓吹“深刻的变革”，疑似要发动第二次的“文化大革命”。</p>
 <p>这些迹象，其实都是中共宫廷斗争的刀光剑影。而且，当年毛泽东发动文革，是有一套有序的作战模式，他先从文艺领域开战，接着战火烧向政治圈，然后再动员红卫兵与群众在全国各地“造反”，发生严重的“武斗”，最后连军方也介入进去，整个中国陷入了“准内战”状态。</p>
 <p>从这个前车之鉴来看，中共党内的大型权力斗争，往往会牵涉到军事力量的较劲。特别是在江泽民主政期间，他纵容军队严重贪腐，扶植出一大批听江派指挥的军系人马，这些人马到今天还在军方内部活跃着，不但对习近平阳奉阴违，也阻挡着习近平对军权的全面掌控。</p>
 <p>特别是，最近有几个信号非常敏感：第一，中共中纪委发出文章，公开提到党内有利益集团“妄图攫取党和国家权力”、“破坏党的集中统一”。第二，习近平在中共党校内部讲话，强调要对党忠诚，还说不要想过太平日子，要党内“丢掉幻想、勇于斗争”。</p>
@@ -42,7 +40,7 @@
 <p>这两个信号表明了军方内部目前有明显的分裂与对抗问题，所以习近平一边继续文宣造势，要求军方忠诚，另外还提拔五名上将，培养自己的人马，一来是加强掌控军权，二来也是告诉对手，只要听话跟他走，就会有好处。</p>
 <p>在我看来，这些迹象都充分显示，中共高层派系在政治圈与军方两大战场都较劲得越来越火热，只差还没公开撕破脸而已。所以如果万一双方缠斗到失控，公开动用自己掌握的军警力量进行内战或者彼此暗杀，那么这就会是对中共最具杀伤力的黑天鹅。</p>
 <h3>黑天鹅3号：极左社会主义复辟 重演文革腥风血雨</h3>
-<p>虽然习近平看似要发动“<ahref="https://github.com/yokxwt356/djy/blob/master/gb/tag/%E4%BA%8C%E6%AC%A1%E6%96%87%E9%9D%A9.md#1">二次文革</a>”或者“文革2.0”，但是从目前情况来看，这场“二次文革”的规模与力度，估计不会像毛泽东的老文革那样惊人，反而比较像是一场“高压版的政经整肃”。因为习近平家当年也是文革受害者，他清楚如果发动全面文革，会让全中国付出惨痛代价，经济崩溃。</p>
+<p>虽然习近平看似要发动“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%8C%E6%AC%A1%E6%96%87%E9%9D%A9.md#1">二次文革</a>”或者“文革2.0”，但是从目前情况来看，这场“二次文革”的规模与力度，估计不会像毛泽东的老文革那样惊人，反而比较像是一场“高压版的政经整肃”。因为习近平家当年也是文革受害者，他清楚如果发动全面文革，会让全中国付出惨痛代价，经济崩溃。</p>
 <p>所以习近平这场“新文革”，虽然跟毛泽东当年一样，是打着“社会主义”的旗帜来斗争政敌、抵抗夺权，来巩固自己的权力。但目前看起来，这场新文革的力道与规模，还是被谨慎地控制着，没有毛泽东当年的疯狂与失控。</p>
 <p>但是，万一习近平与党内反习派真的斗得不可开交，最后全面开战、公开冲突起来，双方要拼个你死我活，那就不能排除这场新文革会加速升级，演变成全国性的文斗与武斗，到时候中国各地就会腥风血雨，损失惨重。</p>
 <h3>黑天鹅4号：台海擦枪走火 引爆东亚军事冲突</h3>
@@ -74,48 +72,48 @@
 目览千秋烟尘落<br />
 心航世外河汉家</p>
 <p>唐浩</p>
-<p>《世界<ahref="https://github.com/yokxwt356/djy/blob/master/gb/tag/%E5%8D%81%E5%AD%97%E8%B7%AF%E5%8F%A3.md#1">十字路口</a>》制作组</p>
+<p>《世界<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8D%81%E5%AD%97%E8%B7%AF%E5%8F%A3.md#1">十字路口</a>》制作组</p>
 <p>责任编辑：李昊?#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/8/21/n13177991.md#1">【十字路口】美病毒调查将出炉 中共5阴招甩锅</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/8/24/n13184312.md#1">【十字路口】中共夺私产 投资中国警惕七大风险</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/8/26/n13188163.md#1">【十字路口】习思想进教科书 中南海内斗加剧？</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/8/31/n13200103.md#1">【十字路口】李连杰也传上封杀榜 中国淘金梦醒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/21/n13177991.md#1">【十字路口】美病毒调查将出炉 中共5阴招甩锅</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/24/n13184312.md#1">【十字路口】中共夺私产 投资中国警惕七大风险</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/26/n13188163.md#1">【十字路口】习思想进教科书 中南海内斗加剧？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/31/n13200103.md#1">【十字路口】李连杰也传上封杀榜 中国淘金梦醒</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/8/n11575471.md#1" target="_blank">可心：从中共建政日与纽伦堡宣判同日说起（上）</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/9/n10040271.md#1" target="_blank">共产暴政录：“胡风反革命集团”案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261439.md#1" target="_blank">从死神手里夺回来的生命</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/7/23/n13108846.md#1">【命理】清朝时风水征验人宅吉凶的一些事</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/8/27/n13191066.md#1">古人最常用的化妆品是什么？</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/3/n13208933.md#1">北洋女学教授转生三世容貌相同 写书讲果报</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/8/29/n13196066.md#1">告别进化论</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/6/n13213624.md#1">“移美港漂”青年：痛心中共摧毁香港自治</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/6/n13215416.md#1">【时事纵横】刘鹤发“定心丸”天安门现凶兆</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/3/n13208894.md#1">【未解之谜】预言新解 激光雷达揭秘玛雅世界</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/3/n13206797.md#1">美味又实惠 今秋你可在Costco购买五种食品</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/8/31/n13200931.md#1">F-35隐形战机有多厉害 F-22飞行员告诉你</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/5/n13212321.md#1">卫星地图显示：南海角力最后摊牌时刻临近</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/5/n13212708.md#1">中共重拳整肃娱乐圈 范冰冰演艺路恐彻底截断</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/6/n13213942.md#1">张钧甯因硕论被扣台独 遭中共网友点名出征</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/4/n13210487.md#1">《尚气与十环传奇》影评：漫威献给东方人的诚意大礼！</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/6/n13214171.md#1">《尚气》横扫周末台美票房 梁朝伟做了2个突破</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/5/n13211945.md#1">林俊逸书法练字20年 写“光明”打气竟藏2滴泪</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/5/n13211418.md#1">小猫在门口挡人 小狗奉主人之命把它拖走</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/4/n13210581.md#1">以色列成疫情惨重国 疫苗防疫有6大问题</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/4/n13210320.md#1">一个常见烹饪错误 让你胆固醇升高</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/5/n13211289.md#1">听到头里有声音叫他买彩券 美国男子中大奖</a></li>
-<li><a href="https://github.com/yokxwt356/djy/blob/master/gb/21/9/6/n13214105.md#1">如何找出旅馆房间内的隐藏式摄影机？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yokxwt356/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yokxwt356/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/7/n13216994.htm">【十字路口】五只黑天鹅盘旋 中共风险罩顶</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/7/n13216994.htm">【十字路口】五只“黑天鹅”盘旋 中共风险罩顶</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yokxwt356/djy/blob/master/gb/21/9/7/n13216994.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yokxwt356/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yokxwt356/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yokxwt356/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yokxwt356/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yokxwt356/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/9/7/n13216994.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
